2008-09-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/network-light/gui.c:
	* src/network-light/upnp.c:

	The UI now controls all network lights on the network, not just itself.

2008-08-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* NEWS:

	Update NEWS file according to the last change.

2008-08-21  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	No need to add orphan objects to tree.

2008-08-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* NEWS:

	Update NEWS file for release 0.6.1.

2008-08-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:

	Bump version number to 0.6.1.

2008-08-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:
	* src/av-cp/Makefile.am:
	* src/network-light/Makefile.am:
	* src/universal-cp/Makefile.am:

	Explicitly require and link to libgthread-2.0. This should fix the
	build issues on Rawhide.

2008-06-16  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* NEWS:

	Update the NEWS file as par the latest change.

2008-06-16  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/Makefile.am:
	* src/network-light/Makefile.am:
	* src/universal-cp/Makefile.am:

	Fix distcheck: Use 'top_srcdir' variable in Makefile.am rather than
	relative paths.

2008-06-16  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* NEWS:

	Prepare NEWS file for release.

2008-06-16  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:

	- Require gupnp 0.12 and gupnp-av 0.2.
	- Bump version to 0.6.

2008-06-03  Jorn Baayen  <jorn@openedhand.com>

	* src/network-light/upnp.c (init_upnp):

	Update for new gupnp_root_device_new() API.

2008-06-02  Zeeshan Ali Khattak  <zeenix@gmail.com>
	    Hugo Calleja <hugo.calleja@gmail.com>

	* src/network-light/upnp.c:

	Create a new UUID for each instance of network-light.

2008-05-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/network-light/upnp.c:

	Remove the unneeded periodic notification to susbscribers.

2008-05-22  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
